--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <title>BlogSpace</title>
 </head>
 
 <body>
-  <div id="blog-list"></div>
+  <!-- Fixed Navbar-->
+  <nav class="navbar">
+    <h1>BlogSpace</h1>
+  </nav>
+
+  <!-- Main Content-->
+  <div class="container">
+    <div class="header">
+      <h2>Latest Blog Posts</h2>
+      <p>Discover amazing stories and insights from our community</p>
+    </div>
+
+    <div id="blog-list" class="loading">
+      Loading amazing content ...
+    </div>
+  </div>
+
+
   <script src="index.js"></script>
 </body>
 
