added blog post form

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       <p>Discover amazing stories and insights from our community</p>
     </div>
 
+    <form>
+      <label for="post-title">Title:</label>
+      <input id="post-title" type="text" />
+
+      <label for="post-body">Body:</label>
+      <textarea id="post-body"></textarea>
+      <button>Post</button>
+    </form>
+
     <div id="blog-list" class="loading">
       Loading amazing content ...
     </div>
