completed fetch req, send new post to server, and then adding the new post to lthe top of ist posts

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>Discover amazing stories and insights from our community</p>
     </div>
 
-    <form>
+    <form id="new-post">
       <label for="post-title">Title:</label>
       <input id="post-title" type="text" />
 
